fixed spacing and header size

--- a/index.css
+++ b/index.css
@@ -1,15 +1,3 @@
-
-/* Reference Values
-Healthcare Red: #a72a17;
-Secondary Text: #7a7a7a
-*/
-{
-  /* Postition */
-  /* Size */
-  /* Display */
-  /* Appearance */
-}
-
 /*----------------------------------------------------------------------------*/
 /* Global Styles */
 /*----------------------------------------------------------------------------*/
@@ -27,7 +15,7 @@ section {
 }
 
 .section-title {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   /* Display */
   text-align: center;
   /* Appearance */
@@ -57,7 +45,7 @@ section {
 
 @media (min-width: 1200px) {
   .container.narrow {
-      max-width: 720px;
+      max-width: 960px;
   }  
 }
 
@@ -78,7 +66,7 @@ section {
   align-items: center;
   justify-content: start;
   /* Appearance */
-  color: #333;
+  color: #444;
   text-decoration: none;
 }
 
@@ -89,8 +77,8 @@ section {
 }
 
 .site-header {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .site-header .container {
@@ -106,6 +94,7 @@ section {
   justify-content: start;
   /* Appearance */
   color: #444;
+  font-size: 1.2rem;
   font-weight: 700;
   text-decoration: none;
   text-transform: uppercase;
@@ -113,8 +102,8 @@ section {
 
 .site-header .site-brand img {
   /* Size */
-  height: 38px;
-  margin-right: 6px;
+  height: 2.2em;
+  margin-right: 0.4em;
 }
 
 .site-header .agency-brand {
@@ -122,7 +111,7 @@ section {
 
 .site-header .agency-brand img {
   /* Size */
-  height: 71px;
+  height: 5rem;
 }
 
 .hero {
